--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [pytest]
-addopts=--tb=short
+addopts=--tb=short -s
 
 [tox]
+skipsdist = true
 envlist =
-       py27-lint,
        py37-lint,
        py27,
        py33,
@@ -13,15 +13,14 @@ envlist =
        py37
 
 [testenv]
-commands = ./runtests.py --fast {posargs} --coverage -rw
-setenv =
-       PYTHONDONTWRITEBYTECODE=1
-deps =
-        -rrequirements.txt
-        -rrequirements.txt.dev
+whitelist_externals = poetry
+skip_install = true
+commands = 
+    poetry install -v
+    poetry run pytest tests/
 
-[testenv:py27-lint]
-commands = ./runtests.py --lintonly
 
 [testenv:py37-lint]
-commands = ./runtests.py --lintonly
+commands =
+    poetry install -v
+    flake8
